--- a/VTthesis.bib
+++ b/VTthesis.bib
@@ -6353,3 +6353,235 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{2004ApJ...607...43M,
+       author = {{Metcalf}, R. Benton and {Moustakas}, Leonidas A. and {Bunker}, Andrew J. and {Parry}, Ian R.},
+        title = "{Spectroscopic Gravitational Lensing and Limits on the Dark Matter Substructure in Q2237+0305}",
+      journal = {\apj},
+     keywords = {Cosmology: Dark Matter, Cosmology: Gravitational Lensing, Galaxies: Quasars: Individual: Alphanumeric: Q2237+0305, Astrophysics},
+         year = 2004,
+        month = may,
+       volume = {607},
+       number = {1},
+        pages = {43-59},
+          doi = {10.1086/383243},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0309738},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2004ApJ...607...43M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2003MNRAS.339..607M,
+       author = {{Moustakas}, Leonidas A. and {Metcalf}, R. Benton},
+        title = "{Detecting dark matter substructure spectroscopically in strong gravitational lenses}",
+      journal = {\mnras},
+     keywords = {gravitational lensing, galaxies: evolution, galaxies: fundamental parameters, galaxies: haloes, quasars: individual: Q2237+0305, dark matter, Astrophysics},
+         year = 2003,
+        month = mar,
+       volume = {339},
+       number = {3},
+        pages = {607-615},
+          doi = {10.1046/j.1365-8711.2003.06055.x},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0206176},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2003MNRAS.339..607M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2021MNRAS.506.1741M,
+       author = {{Macias}, Oscar and {van Leijen}, Harm and {Song}, Deheng and {Ando}, Shin'ichiro and {Horiuchi}, Shunsaku and {Crocker}, Roland M.},
+        title = "{Cherenkov Telescope Array sensitivity to the putative millisecond pulsar population responsible for the Galactic Centre excess}",
+      journal = {\mnras},
+     keywords = {pulsars: general, dark matter, gamma-rays: general, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2021,
+        month = sep,
+       volume = {506},
+       number = {2},
+        pages = {1741-1760},
+          doi = {10.1093/mnras/stab1450},
+archivePrefix = {arXiv},
+       eprint = {2102.05648},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021MNRAS.506.1741M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2022MNRAS.509L..11S,
+       author = {{Siegert}, Thomas and {Crocker}, Roland M. and {Macias}, Oscar and {Panther}, Fiona H. and {Calore}, Francesca and {Song}, Deheng and {Horiuchi}, Shunsaku},
+        title = "{Measuring the smearing of the Galactic 511-keV signal: positron propagation or supernova kicks?}",
+      journal = {\mnras},
+     keywords = {cosmic rays, Galaxy: bulge, dark matter, gamma-rays: ISM, gamma-rays: stars, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2022,
+        month = jan,
+       volume = {509},
+       number = {1},
+        pages = {L11-L16},
+          doi = {10.1093/mnrasl/slab113},
+archivePrefix = {arXiv},
+       eprint = {2109.03691},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022MNRAS.509L..11S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@MISC{1992eocm.rept..227W,
+       author = {{Winkler}, Christoph},
+        title = "{INTEGRAL: International Gamma-Ray Astrophysics Laboratory.}",
+     keywords = {Astronomical Observatories, Astronomical Satellites, Astronomical Spectroscopy, Gamma Rays, Satellite-Borne Instruments, Spaceborne Astronomy, Angular Resolution, Cameras, Germanium, Image Resolution, Imaging Spectrometers, Sensitivity, Ground Support Systems and Facilities (Space)},
+ howpublished = {Environment Observation and Climate Modelling Through International Space Projects},
+         year = 1992,
+        month = jul,
+        pages = {227},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1992eocm.rept..227W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{2002APS..APRU11010K,
+       author = {{Konopelko}, Alexander},
+        title = "{High Energy Stereoscopic System (H.E.S.S.) project}",
+    booktitle = {APS April Meeting Abstracts},
+         year = 2002,
+       series = {APS Meeting Abstracts},
+        month = apr,
+          eid = {U11.010},
+        pages = {U11.010},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2002APS..APRU11010K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{2007APS..APRM11009D,
+       author = {{Dingus}, Brenda},
+        title = "{HAWC (High Altitude Water Cherenkov) Observatory for Surveying the TeV Sky}",
+    booktitle = {APS April Meeting Abstracts},
+         year = 2007,
+       series = {APS Meeting Abstracts},
+        month = apr,
+          eid = {M11.009},
+        pages = {M11.009},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2007APS..APRM11009D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{2001ICRC....6.2192B,
+       author = {{Battiston}, R. and {AMS Collaboration}},
+        title = "{AMS-02: a Superconducting Spectrometer for the Search of Dark Matter and Antimatter on the ISS}",
+    booktitle = {International Cosmic Ray Conference},
+         year = 2001,
+       series = {International Cosmic Ray Conference},
+       volume = {6},
+        month = aug,
+        pages = {2192},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2001ICRC....6.2192B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2003NuPhS.118..388K,
+       author = {{Karle}, A. and {Ahrens}, J. and {Bahcall}, J.~N. and {Bai}, X. and {Becka}, T. and {Becker}, K. -H. and {Besson}, D.~Z. and {Berley}, D. and {Bernardini}, E. and {Bertrand}, D. and {Binon}, F. and {Biron}, A. and {B{\"o}ser}, S. and {Bohm}, C. and {Botner}, O. and {Bouhali}, O. and {Burgess}, Th. and {Castermans}, T. and {Chirkin}, D. and {Conrad}, J. and {Cooley}, J. and {Cowen}, D.~F. and {Davour}, A. and {de Clercq}, C. and {De Young}, T. and {Desiati}, P. and {Dewulf}, J. -P. and {Dingus}, B. and {Ellsworth}, R. and {Evenson}, P.~A. and {Fazely}, A.~R. and {Feser}, T. and {Gaisser}, T.~K. and {Gallagher}, J. and {Ganugapati}, R. and {Goldschmidt}, A. and {Goodman}, J. and {Hallgren}, A. and {Halzen}, F. and {Hanson}, K. and {Hardtke}, R. and {Hauschildt}, T. and {Hellwig}, M. and {Herquet}, P. and {Hill}, G.~C. and {Hulth}, P.~O. and {Hultgvist}, K. and {Hundertmark}, S. and {Jacobsen}, J. and {Japaridze}, G.~S. and {Karle}, A. and {K{\"o}pke}, L. and {Kowalski}, M. and {Lamoureux}, J.~I. and {Leich}, H. and {Leuthold}, M. and {Lindahl}, P. and {Liubarsky}, I. and {Madson}, J. and {Marciniewski}, P. and {Matis}, H.~S. and {McParland}, C.~P. and {Minaeva}, Y. and {Mio{\v{c}}inovi{\'c}}, P. and {Morse}, R. and {Nahnhauer}, R. and {Neunh{\"o}ffer}, T. and {Niessen}, P. and {Nygren}, D.~R. and {Ogelman}, H. and {Olbrechts}, Ph. and {P{\'e}rez de Los Heros}, C. and {Pohl}, A.~C. and {Price}, P.~B. and {Przybylski}, G.~T. and {Rawlins}, K. and {Resconi}, E. and {Rhode}, W. and {Ribordy}, M. and {Richter}, S. and {Sander}, H. -G. and {Schmidt}, T. and {Schneider}, D. and {Seckel}, D. and {Solarz}, M. and {Sparke}, L. and {Spiczak}, G.~M. and {Spiering}, C. and {Stanev}, T. and {Steele}, D. and {Steffen}, P. and {Stokstad}, R.~G. and {Sudhoff}, P. and {Sulanke}, K. -H. and {Sullivan}, G.~W. and {Sumners}, T. and {Taboada}, I. and {Thollander}, L. and {Tilav}, S. and {Walck}, C. and {Weinheimer}, C. and {Wiebusch}, C.~H. and {Wiedemann}, Ch. and {Wischnewski}, R. and {Wissing}, H. and {Woschnagg}, K. and {Yoshida}, Sh.},
+        title = "{IceCube - the next generation neutrino telescope at the South Pole}",
+      journal = {Nuclear Physics B Proceedings Supplements},
+     keywords = {Astrophysics},
+         year = 2003,
+        month = apr,
+       volume = {118},
+        pages = {388-395},
+          doi = {10.1016/S0920-5632(03)01337-9},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0209556},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2003NuPhS.118..388K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2015PhRvL.115p1301B,
+       author = {{Boyarsky}, A. and {Franse}, J. and {Iakubovskyi}, D. and {Ruchayskiy}, O.},
+        title = "{Checking the Dark Matter Origin of a 3.53 keV Line with the Milky Way Center}",
+      journal = {\prl},
+     keywords = {95.35.+d, 13.35.Hb, 95.85.Nv, 98.35.Jk, Dark matter, Decays of heavy neutrinos, X-ray, Galactic center bar circumnuclear matter and bulge, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies, Astrophysics - High Energy Astrophysical Phenomena, High Energy Physics - Phenomenology},
+         year = 2015,
+        month = oct,
+       volume = {115},
+       number = {16},
+          eid = {161301},
+        pages = {161301},
+          doi = {10.1103/PhysRevLett.115.161301},
+archivePrefix = {arXiv},
+       eprint = {1408.2503},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015PhRvL.115p1301B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2016MNRAS.458.3592J,
+       author = {{Jeltema}, Tesla and {Profumo}, Stefano},
+        title = "{Deep XMM observations of Draco rule out at the 99 per cent confidence level a dark matter decay origin for the 3.5 keV line}",
+      journal = {\mnras},
+     keywords = {line: identification, dark matter, X-rays: galaxies, X-rays: galaxies: clusters, X-rays: ISM, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies, High Energy Physics - Phenomenology},
+         year = 2016,
+        month = jun,
+       volume = {458},
+       number = {4},
+        pages = {3592-3596},
+          doi = {10.1093/mnras/stw578},
+archivePrefix = {arXiv},
+       eprint = {1512.01239},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016MNRAS.458.3592J},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2014PhRvD..89b5017H,
+       author = {{Horiuchi}, Shunsaku and {Humphrey}, Philip J. and {O{\~n}orbe}, Jose and {Abazajian}, Kevork N. and {Kaplinghat}, Manoj and {Garrison-Kimmel}, Shea},
+        title = "{Sterile neutrino dark matter bounds from galaxies of the Local Group}",
+      journal = {\prd},
+     keywords = {14.60.St, 95.35.+d, Non-standard-model neutrinos right-handed neutrinos etc., Dark matter, Astrophysics - Cosmology and Nongalactic Astrophysics, High Energy Physics - Phenomenology},
+         year = 2014,
+        month = jan,
+       volume = {89},
+       number = {2},
+          eid = {025017},
+        pages = {025017},
+          doi = {10.1103/PhysRevD.89.025017},
+archivePrefix = {arXiv},
+       eprint = {1311.0282},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2014PhRvD..89b5017H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2016PhRvD..94j3525W,
+       author = {{Wilkinson}, Ryan J. and {Vincent}, Aaron C. and {B{\r{A}}`hm}, C{\'e}line and {McCabe}, Christopher},
+        title = "{Ruling out the light weakly interacting massive particle explanation of the Galactic 511 keV line}",
+      journal = {\prd},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, High Energy Physics - Phenomenology},
+         year = 2016,
+        month = nov,
+       volume = {94},
+       number = {10},
+          eid = {103525},
+        pages = {103525},
+          doi = {10.1103/PhysRevD.94.103525},
+archivePrefix = {arXiv},
+       eprint = {1602.01114},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016PhRvD..94j3525W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2006ApJ...640L..55K,
+       author = {{Kalemci}, E. and {Boggs}, S.~E. and {Milne}, P.~A. and {Reynolds}, S.~P.},
+        title = "{Searching for Annihilation Radiation from SN 1006 with SPI on INTEGRAL}",
+      journal = {\apjl},
+     keywords = {Gamma Rays: Observations, ISM: Individual: Alphanumeric: SN 1006, ISM: Supernova Remnants, Astrophysics},
+         year = 2006,
+        month = mar,
+       volume = {640},
+       number = {1},
+        pages = {L55-L57},
+          doi = {10.1086/503289},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0602233},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2006ApJ...640L..55K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
